--- a/src/view/Card.css
+++ b/src/view/Card.css
@@ -7,7 +7,7 @@
     position: absolute;
     display: inline-flex;
     font-size: large;
-    border-radius: calc(var(--margin) / 2);
+    border-radius: var(--margin);
     background: white;
     border: solid 1px black;
     width: var(--width);
